# src/swagger.json
@@ -1,38 +1,107 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
     "title": "App API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b>."
   },
-  "host": [
-    "localhost:4000"
+  "servers": [
+    {
+      "url": "http://localhost:4000/",
+      "description": "local server"
+    },
+    {
+      "url": "http://localhost:4001/",
+      "description": "the other server"
+    }
   ],
-  "basePath": "/",
-  "schemes": [
-    "http",
-    "https"
-  ],
-  "securityDefinitions": {},
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
-  "paths": {},
-  "definitions": {
-    "Sign": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string",
-          "example": "ibrahimsadiktamim@gmail.com"
+  "paths": {
+    "/api/v1/authentication/login": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Sign a specific user in",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Login Successful"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Invalid Credentials"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         },
-        "password": {
-          "type": "string",
-          "example": "12345678"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "required": [
+                  "email",
+                  "password"
+                ],
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "minLength": 1,
+                    "example": "hello@example.xyz"
+                  },
+                  "password": {
+                    "type": "string",
+                    "minLength": 6,
+                    "example": "123456"
+                  }
+                }
+              }
+            }
+          }
         }
+      }
+    },
+    "/api/v1/authentication/validate": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Validate user",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Authenticated"
+          },
+          "400": {
+            "description": "Invalid Request"
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "404": {
+            "description": "No User Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
